feat: api template fill post. (#42)
* doc: Coverage fix.

* doc: Coverage set to openclover.

* feat: API post single template job.

* feat: API get single template binary.

* feat: API get single template binary.

* feat: API jsonpath eval.
